update html and css

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <h1>Chen Probeh</h1>
     <p>
-      chen probeh is ben probeh's son, <br />
-      chen always denies it. <br />
-      this site was created to make sure that <br />
-      chen will never forget that im his father. <br />
-      hapoel zona.
+      חן פרובה הוא הבן של בן פרובה. <br />חן לא מפסיק להכחיש שאני הוא אביו.
+      <br />אתר זה נבנה לוודא שחן לעולם <br />לא ישכח שאני הוא אביו <br />
+      נ,ב<br />הפועל זונה.
     </p>
-    <marquee class="wallak" behavior="" direction="">!!!!!!!!!איזה בן יש לי!!!!!!!!!!!</marquee>
+    <marquee class="wallak" behavior="" direction=""
+      >!!!!!!!!!איזה בן יש לי!!!!!!!!!!!</marquee
+    >
   </body>
 </html>
