update html and css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Chen Probeh</h1>
     <p>
-      חן פרובה הוא הבן של בן פרובה. <br />חן לא מפסיק להכחיש שאני הוא אביו.
-      <br />אתר זה נבנה לוודא שחן לעולם <br />לא ישכח שאני הוא אביו <br />
-      נ,ב<br />הפועל זונה.
+      חן פרובה הוא <br />הבן של בן פרובה. <br />חן לא מפסיק<br> להכחיש שאני הוא
+      אביו. <br />אתר זה נבנה <br>לוודא שחן לעולם <br />לא ישכח שאני הוא אביו <br />
+      נ.ב<br />הפועל זונה.
     </p>
     <marquee class="wallak" behavior="" direction=""
       >!!!!!!!!!איזה בן יש לי!!!!!!!!!!!</marquee
