update html and css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <h1>Chen Probeh</h1>
     <p>
-      חן פרובה הוא <br />הבן של בן פרובה. <br />חן לא מפסיק<br> להכחיש שאני הוא
-      אביו. <br />אתר זה נבנה <br>לוודא שחן לעולם <br />לא ישכח שאני הוא אביו <br />
+      חן פרובה הוא <br />הבן של בן פרובה. <br />חן לא מפסיק<br> להכחיש  <br>שאני הוא
+      אביו. <br />אתר זה נבנה <br>לוודא שחן לעולם <br />לא ישכח  <br>שאני הוא אביו <br />
       נ.ב<br />הפועל זונה.
     </p>
     <marquee class="wallak" behavior="" direction=""
